--- a/index.html
+++ b/index.html
@@ -16,31 +16,42 @@
     <!-- All CSS here -->
     <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="assets/css/fontawesome.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/animate.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link type="text/css" rel="stylesheet" href="assets/css/owl.theme.min.css">
     <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body>
 
+    <!-- start clock wrapper -->
     <div class="digital-clock-wrapper">
-        <div class="container row">
-            <div class="col-lg-4 mx-auto">
-                <div class="clock d-flex">
-                    <div class="hour"></div>
-                    <div class="minute"></div>
-                    <div class="second"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 mx-auto">
+                    <div class="clock d-flex justify-content-center align-items-center">
+                        <div class="clock-delemeter">
+                            <p class="hour"></p>
+                            <span class="seperator">:</span>
+                        </div>
+                        <div class="clock-delemeter ">
+                            <p class="minute"></p>
+                            <span class="seperator">:</span>
+                        </div>
+                        <div class="clock-delemeter ">
+                            <p class="second"></p>
+                        </div>
+                    </div>
                 </div>
+                <!-- end col -->
             </div>
+            <!-- end row -->
         </div>
+        <!-- end container -->
     </div>
+    <!-- end clock wrapper -->
 
     <!-- All Javascript Here -->
     <script type="text/javascript" src="assets/js/jquery.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
 
 </body>
