--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         <div class="clock-delemeter ">
                             <p class="second"></p>
                         </div>
+                        <div class="clock-delemeter ">
+                            <p class="time-format"></p>
+                        </div>
                     </div>
                 </div>
                 <!-- end col -->
